Lowered screen width threshold for mobile layout (need to work on overlaps/general screen issues with screen widths between 1100 and about 1350

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,7 +160,7 @@ strong {
     font-family: "Helvetica Neue", helvetica, arial, sans-serif;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1100px) {
     #sections {
         /*position: fixed;*/
         /*display: inline-block;*/
